feat: add prettier editor
to check: npx prettier . --check \nto write: npx prettier . --check

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,12 +43,12 @@
 
 @layer base {
     * {
-        @apply border-transparent box-border;
+        @apply box-border border-transparent;
     }
     body {
         @apply bg-background text-font;
     }
     svg {
-        @apply w-fit h-fit
+        @apply h-fit w-fit;
     }
 }
