feat: add header component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,9 +13,9 @@
         --primary-hover: #272c36;
         --primary-active: #16181d;
 
-        --secondary: #ee811c;
+        --secondary: #ea580c;
         --secondary-hover: #fb8c24;
-        --secondary-active: #d37319;
+        --secondary-active: #d3510c;
 
         --canvas: #1e2128;
 
