fix(styles): fix svgs hover color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,6 @@
         @apply bg-background text-font;
     }
     svg {
-        @apply h-fit w-fit fill-inherit;
+        @apply h-fit w-fit fill-inherit stroke-inherit;
     }
 }
