feat: add all carousel's functionality without pause

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,6 @@
         @apply h-fit w-fit fill-inherit stroke-inherit;
     }
     img {
-        @apply select-none
+        @apply select-none;
     }
 }
